# assembly_dual_controllers

./: CMakeLists.txt  LICENSE  README.md  assembly_dual_controllers_plugin.xml  package.xml
config/: assembly_dual_controllers.yaml  assembly_dual_controllers_dual.yaml  assembly_dual_controllers_dual_husky.yaml  assembly_dual_controllers_triple.yaml  default_combined_controllers.yaml  default_combined_controllers_dual.yaml  default_combined_controllers_dual_husky.yaml  default_combined_controllers_single.yaml  default_combined_controllers_triple.yaml  franka_combined_control_node.yaml  franka_combined_control_node_dual.yaml  franka_combined_control_node_dual_husky.yaml  franka_combined_control_node_triple.yaml  franka_combined_control_single_node.yaml  franka_combined_example_controllers_dual.yaml
include/assembly_dual_controllers/: action_server_base.h  assemble_approach_action_server.h  assembly_dual_controller.h  assembly_dual_controller_backup.h  assembly_single_controller.h  assembly_triple_controller.h  criteria.h  franka_data_container (to be deleted).h  franka_model_updater.h  idle_control_server.h  peg_in_hole_base.h  single_peginhole_action_server.h
include/assembly_dual_controllers/robot_model/: franka_panda_model.h  robot_model.h
include/assembly_dual_controllers/servers/: action_server_base.h  assemble_GMM_spiral_action_server.h  assemble_approach_action_server.h  assemble_approach_bolt_action_server.h  assemble_approach_hip_action_server.h  assemble_back_forth_action_server.h  assemble_bolt_action_server.h  assemble_bolting_ready_action_server.h  assemble_dual_approach_action_server.h  assemble_dual_side_chair_recovery_action_server.h  assemble_dual_spiral_action_server.h  assemble_insert_action_server.h  assemble_kitting_action_server.h  assemble_move_action_server.h  assemble_parallel_action_server.h  assemble_peginhole_action_server.h  assemble_press_action_server.h  assemble_probe_edge_action_server.h  assemble_retreat_bolt_action_server.h  assemble_rotation_action_server.h  assemble_side_chair_action_server.h  assemble_spiral_action_server.h  assemble_triple_hold_action_server.h  assemble_triple_move_action_server.h  assemble_triple_recovery_action_server.h  assemble_verify_action_server.h  grasp_update_server.h  idle_control_server.h  joint_limit_avoidance_action_server.h  joint_trajectory_action_server.h  single_peginhole_action_server(deprecated).h  task_space_move_action_server.h  task_space_multiple_move_action_server.h
include/assembly_dual_controllers/utils/: dyros_math.h
include/assembly_dual_controllers/utils/control/: EM_GMM_estimator.h  criteria.h  criteria_2.h  peg_in_hole_base.h  peg_in_hole_base_2.h  wave_generator.h
include/assembly_dual_controllers/utils/file/: debug_stream.h
include/assembly_dual_controllers/utils/model/: franka_model_updater.h
include/assembly_dual_controllers/utils/timer/: suhan_benchmark.h
launch/: assembly_controller.launch  assembly_controller_dual.launch  assembly_controller_dual_husky.launch  assembly_controller_single.launch  assembly_controller_triple.launch
scripts/: time_jitter.m  time_jitter_model.m
src/: assemble_approach_action_server.cpp  assembly_dual_controller.cpp  assembly_dual_controller_backup.cpp  assembly_single_controller.cpp  assembly_triple_controller.cpp  joint_trajectory_action_server.cpp  single_peginhole_action_server.cpp
src/model/: franka_model_updater.cpp  franka_panda_model.cpp
src/servers/: assemble_GMM_spiral_action_server.cpp  assemble_approach_action_server.cpp  assemble_approach_bolt_action_server.cpp  assemble_approach_hip_action_server.cpp  assemble_back_forth_action_server.cpp  assemble_bolt_action_server.cpp  assemble_bolting_ready_action_server.cpp  assemble_dual_approach_action_server.cpp  assemble_dual_side_chair_recovery_action_server.cpp  assemble_dual_spiral_action_server.cpp  assemble_insert_action_server.cpp  assemble_kitting_action_server.cpp  assemble_move_action_server.cpp  assemble_parallel_action_server.cpp  assemble_peginhole_action_server(deprecated).cpp  assemble_press_action_server.cpp  assemble_probe_edge_action_server.cpp  assemble_retreat_bolt_action_server.cpp  assemble_rotation_action_server.cpp  assemble_side_chair_action_server.cpp  assemble_spiral_action_server.cpp  assemble_triple_hold_action_server.cpp  assemble_triple_move_action_server.cpp  assemble_triple_recovery_action_server.cpp  assemble_verify_action_server.cpp  assemble_verify_action_server_backup.cpp  grasp_update_server.cpp  idle_control_server.cpp  joint_limit_avoidance_action_server.cpp  joint_trajectory_action_server.cpp  task_space_move_action_server.cpp  task_space_multiple_move_action_server.cpp
src/utils/: dyros_math.cpp
src/utils/control/: EM_GMM_estimator.cpp  criteria.cpp  peg_in_hole_base.cpp
